--- a/IdeaProjects/bookappbloc/pubspec.yaml
+++ b/IdeaProjects/bookappbloc/pubspec.yaml
@@ -1,12 +1,12 @@
 name: bookappbloc
-description: "A new Flutter project."
+description: A new Flutter project.
 
-publish_to: 'none' #
+publish_to: 'none'
 
 version: 1.0.0+1
 
 environment:
-  sdk: ^3.8.0
+  sdk: '>=3.8.0 <4.0.0'
 
 dependencies:
   flutter:
@@ -16,13 +16,16 @@ dependencies:
   equatable: ^2.0.5
   bloc: ^8.1.2
   intl: ^0.18.1
+  sqflite: ^2.0.3+1
+  sqflite_common_ffi: ^2.0.0
+  http: ^0.13.6
+
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_lints: ^5.0.0
+  flutter_lints: ^3.0.1
   bloc_test: ^9.0.0-dev.4
 
 flutter:
   uses-material-design: true
-
